[gd_scene load_steps=20 format=3 uid="uid://rl0plylmqwre"]

[ext_resource type="PackedScene" path="res://Assets/Pellets.tscn" id="1"]
[ext_resource type="TileSet" uid="uid://cqtqobmlrpe3c" path="res://Art/Background_Tileset.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://bv7krbhynhbia" path="res://Art/Pac_Person3.png" id="3"]
[ext_resource type="PackedScene" uid="uid://d1bq6krqdcxu3" path="res://Assets/Pac-Man.tscn" id="4"]
[ext_resource type="Script" path="res://Assets/Game.gd" id="5"]
[ext_resource type="AudioStream" uid="uid://b2q283rfowx4h" path="res://Sounds/Uhht.wav" id="6"]
[ext_resource type="FontFile" path="res://Art/Arcade_Font.tres" id="7"]
[ext_resource type="Script" path="res://Assets/UI.gd" id="8"]
[ext_resource type="PackedScene" uid="uid://dllaln201jx0e" path="res://Assets/Red.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://jgs7bi8xkiio" path="res://Assets/Blue.tscn" id="10"]
[ext_resource type="PackedScene" path="res://Assets/Pink.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://bi0gr1dud87md" path="res://Assets/Orange.tscn" id="12"]
[ext_resource type="AudioStream" uid="uid://ce3v1g578cbe3" path="res://Sounds/Wah.wav" id="13"]
[ext_resource type="AudioStream" uid="uid://dvp07tg6o2uau" path="res://Sounds/The_best_intro.wav" id="14_uygvc"]
[ext_resource type="AudioStream" uid="uid://dd062sqep5yno" path="res://Sounds/Wooo.wav" id="15"]
[ext_resource type="AudioStream" uid="uid://bsnq2gsutj63v" path="res://Sounds/Scared.wav" id="16"]
[ext_resource type="AudioStream" uid="uid://bdeiv0lswnpes" path="res://Sounds/Eye_Eww.wav" id="17"]
[ext_resource type="AudioStream" uid="uid://bajjvk81qyv02" path="res://Sounds/Bwahhh.wav" id="18"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(8, 20)

[node name="Pac-Man" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("5")
pellet_prefab = ExtResource("1")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("8")

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 480.0
offset_top = 18.0
offset_right = 582.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("7")
theme_override_font_sizes/font_size = 34
text = "Score:"

[node name="Score" type="Label" parent="UI"]
offset_left = 594.0
offset_top = 18.0
offset_right = 720.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("7")
theme_override_font_sizes/font_size = 34
text = "0000"

[node name="HighScoreLabel" type="Label" parent="UI"]
offset_left = 816.0
offset_top = 18.0
offset_right = 1002.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("7")
theme_override_font_sizes/font_size = 34
text = "High Score:"

[node name="HighScore" type="Label" parent="UI"]
offset_left = 1008.0
offset_top = 18.0
offset_right = 1104.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("7")
theme_override_font_sizes/font_size = 34
text = "0000"

[node name="Ready_Text" type="Label" parent="UI"]
visible = false
offset_left = 672.0
offset_top = 474.0
offset_right = 912.0
offset_bottom = 509.0
theme_override_colors/font_color = Color(1, 1, 0.0705882, 1)
theme_override_fonts/font = ExtResource("7")
theme_override_font_sizes/font_size = 34
text = "Ready!"

[node name="Game_Over_Text" type="Label" parent="UI"]
visible = false
offset_left = 672.0
offset_top = 474.0
offset_right = 912.0
offset_bottom = 509.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("7")
theme_override_font_sizes/font_size = 34
text = "Game   Over"

[node name="Life1" type="Sprite2D" parent="UI"]
position = Vector2(504, 852)
scale = Vector2(3, 3)
texture = ExtResource("3")

[node name="Life2" type="Sprite2D" parent="UI"]
position = Vector2(552, 852)
scale = Vector2(3, 3)
texture = ExtResource("3")

[node name="Life3" type="Sprite2D" parent="UI"]
position = Vector2(600, 852)
scale = Vector2(3, 3)
texture = ExtResource("3")

[node name="Life4" type="Sprite2D" parent="UI"]
position = Vector2(648, 852)
scale = Vector2(3, 3)
texture = ExtResource("3")

[node name="Life5" type="Sprite2D" parent="UI"]
position = Vector2(696, 852)
scale = Vector2(3, 3)
texture = ExtResource("3")

[node name="Pellets" parent="." instance=ExtResource("1")]

[node name="Enemies" type="Node2D" parent="."]

[node name="Red_Line" type="Line2D" parent="Enemies"]
width = 1.0
default_color = Color(1, 0.203922, 0, 1)

[node name="Red" parent="Enemies" instance=ExtResource("9")]
position = Vector2(264, 116)
disable_mode = 1
speed = 100

[node name="Pink_Line" type="Line2D" parent="Enemies"]
width = 1.0
default_color = Color(0.980392, 0.705882, 0.980392, 1)

[node name="Pink" parent="Enemies" instance=ExtResource("11")]
position = Vector2(264, 140)
speed = 100
color = "Red"

[node name="Blue_Line" type="Line2D" parent="Enemies"]
width = 1.0
default_color = Color(0, 1, 1, 1)

[node name="Blue" parent="Enemies" instance=ExtResource("10")]
position = Vector2(248, 140)
speed = 100
color = "Red"

[node name="Orange_Line" type="Line2D" parent="Enemies"]
width = 1.0
default_color = Color(0.980392, 0.745098, 0.352941, 1)

[node name="Orange" parent="Enemies" instance=ExtResource("12")]
position = Vector2(280, 140)
speed = 100
color = "Red"

[node name="Pac-Man" parent="." instance=ExtResource("4")]

[node name="Arena" type="Node2D" parent="."]

[node name="Arena_Grid" type="TileMap" parent="Arena"]
tile_set = ExtResource("2")
format = 2
layer_0/tile_data = PackedInt32Array(262166, 2, 5, 262167, 2, 5, 262168, 2, 5, 262169, 2, 5, 262170, 2, 5, 262171, 2, 5, 262172, 2, 5, 262173, 2, 5, 262174, 2, 5, 262175, 2, 5, 262178, 2, 5, 262179, 2, 5, 262180, 2, 5, 262181, 2, 5, 262182, 2, 5, 262183, 2, 5, 262184, 2, 5, 262185, 2, 5, 262186, 2, 5, 262187, 2, 5, 262188, 2, 5, 262189, 2, 5, 327700, 2, 5, 327711, 2, 5, 327714, 2, 5, 327720, 2, 5, 327725, 2, 5, 393236, 2, 5, 393241, 2, 5, 393247, 2, 5, 393250, 2, 5, 393256, 2, 5, 393261, 2, 5, 458772, 2, 5, 458777, 2, 5, 458786, 2, 5, 458792, 2, 5, 458797, 2, 5, 524308, 2, 5, 524309, 2, 5, 524310, 2, 5, 524311, 2, 5, 524312, 2, 5, 524313, 2, 5, 524314, 2, 5, 524315, 2, 5, 524316, 2, 5, 524317, 2, 5, 524318, 2, 5, 524319, 2, 5, 524320, 2, 5, 524325, 2, 5, 524326, 2, 5, 524327, 2, 5, 524328, 2, 5, 524329, 2, 5, 524330, 2, 5, 524331, 2, 5, 524332, 2, 5, 524333, 2, 5, 589844, 2, 5, 589849, 2, 5, 589852, 2, 5, 589864, 2, 5, 589869, 2, 5, 655380, 2, 5, 655385, 2, 5, 655388, 2, 5, 655397, 2, 5, 655405, 2, 5, 720916, 2, 5, 720917, 2, 5, 720918, 2, 5, 720919, 2, 5, 720920, 2, 5, 720921, 2, 5, 720924, 2, 5, 720925, 2, 5, 720926, 2, 5, 720927, 2, 5, 720930, 2, 5, 720931, 2, 5, 720932, 2, 5, 720933, 2, 5, 720936, 2, 5, 720937, 2, 5, 720938, 2, 5, 720939, 2, 5, 786457, 2, 5, 786463, 2, 5, 786466, 2, 5, 786472, 2, 5, 851993, 2, 5, 851999, 2, 5, 852002, 2, 5, 852008, 2, 5, 917529, 2, 5, 917532, 2, 5, 917533, 2, 5, 917534, 2, 5, 917535, 2, 5, 917536, 2, 5, 917537, 2, 5, 917538, 2, 5, 917539, 2, 5, 917540, 2, 5, 917541, 2, 5, 917544, 2, 5, 983065, 2, 5, 983068, 2, 5, 983077, 2, 5, 983080, 2, 5, 1048601, 2, 5, 1048604, 2, 5, 1048606, 2, 5, 1048607, 2, 5, 1048608, 2, 5, 1048609, 2, 5, 1048610, 2, 5, 1048611, 2, 5, 1048613, 2, 5, 1048616, 2, 5, 1114128, 2, 5, 1114129, 2, 5, 1114130, 2, 5, 1114131, 2, 5, 1114132, 2, 5, 1114133, 2, 5, 1114134, 2, 5, 1114135, 2, 5, 1114136, 2, 5, 1114137, 2, 5, 1114138, 2, 5, 1114139, 2, 5, 1114140, 2, 5, 1114142, 2, 5, 1114143, 2, 5, 1114144, 2, 5, 1114145, 2, 5, 1114146, 2, 5, 1114147, 2, 5, 1114149, 2, 5, 1114150, 2, 5, 1114151, 2, 5, 1114152, 2, 5, 1114153, 2, 5, 1114154, 2, 5, 1114155, 2, 5, 1114156, 2, 5, 1114157, 2, 5, 1114158, 2, 5, 1114159, 2, 5, 1114160, 2, 5, 1114161, 2, 5, 1179673, 2, 5, 1179676, 2, 5, 1179678, 2, 5, 1179679, 2, 5, 1179680, 2, 5, 1179681, 2, 5, 1179682, 2, 5, 1179683, 2, 5, 1179685, 2, 5, 1179688, 2, 5, 1245209, 2, 5, 1245212, 2, 5, 1245221, 2, 5, 1245224, 2, 5, 1310745, 2, 5, 1310748, 2, 5, 1310749, 2, 5, 1310750, 2, 5, 1310751, 2, 5, 1310752, 2, 5, 1310753, 2, 5, 1310754, 2, 5, 1310755, 2, 5, 1310756, 2, 5, 1310757, 2, 5, 1310760, 2, 5, 1376281, 2, 5, 1376284, 2, 5, 1376293, 2, 5, 1376296, 2, 5, 1441817, 2, 5, 1441820, 2, 5, 1441829, 2, 5, 1441832, 2, 5, 1507348, 2, 5, 1507349, 2, 5, 1507350, 2, 5, 1507351, 2, 5, 1507352, 2, 5, 1507353, 2, 5, 1507354, 2, 5, 1507355, 2, 5, 1507356, 2, 5, 1507357, 2, 5, 1507358, 2, 5, 1507359, 2, 5, 1507362, 2, 5, 1507363, 2, 5, 1507364, 2, 5, 1507365, 2, 5, 1507366, 2, 5, 1507367, 2, 5, 1507368, 2, 5, 1507369, 2, 5, 1507370, 2, 5, 1507371, 2, 5, 1507372, 2, 5, 1507373, 2, 5, 1572884, 2, 5, 1572889, 2, 5, 1572895, 2, 5, 1572898, 2, 5, 1572904, 2, 5, 1572909, 2, 5, 1638420, 2, 5, 1638425, 2, 5, 1638431, 2, 5, 1638434, 2, 5, 1638440, 2, 5, 1638445, 2, 5, 1703956, 2, 5, 1703957, 2, 5, 1703958, 2, 5, 1703961, 2, 5, 1703962, 2, 5, 1703963, 2, 5, 1703964, 2, 5, 1703965, 2, 5, 1703966, 2, 5, 1703967, 2, 5, 1703968, 2, 5, 1703969, 2, 5, 1703970, 2, 5, 1703971, 2, 5, 1703972, 2, 5, 1703973, 2, 5, 1703974, 2, 5, 1703975, 2, 5, 1703976, 2, 5, 1703979, 2, 5, 1703980, 2, 5, 1703981, 2, 5, 1769494, 2, 5, 1769497, 2, 5, 1769500, 2, 5, 1769509, 2, 5, 1769512, 2, 5, 1769515, 2, 5, 1835030, 2, 5, 1835033, 2, 5, 1835036, 2, 5, 1835045, 2, 5, 1835048, 2, 5, 1835051, 2, 5, 1900564, 2, 5, 1900565, 2, 5, 1900566, 2, 5, 1900567, 2, 5, 1900568, 2, 5, 1900569, 2, 5, 1900572, 2, 5, 1900573, 2, 5, 1900574, 2, 5, 1900575, 2, 5, 1900578, 2, 5, 1900579, 2, 5, 1900580, 2, 5, 1900581, 2, 5, 1900584, 2, 5, 1900585, 2, 5, 1900586, 2, 5, 1900587, 2, 5, 1900588, 2, 5, 1900589, 2, 5, 1966100, 2, 5, 1966111, 2, 5, 1966114, 2, 5, 1966125, 2, 5, 2031636, 2, 5, 2031647, 2, 5, 2031650, 2, 5, 2031661, 2, 5, 2097172, 2, 5, 2097173, 2, 5, 2097174, 2, 5, 2097175, 2, 5, 2097176, 2, 5, 2097177, 2, 5, 2097178, 2, 5, 2097179, 2, 5, 2097180, 2, 5, 2097181, 2, 5, 2097182, 2, 5, 2097183, 2, 5, 2097184, 2, 5, 2097185, 2, 5, 2097186, 2, 5, 2097187, 2, 5, 2097188, 2, 5, 2097189, 2, 5, 2097190, 2, 5, 2097191, 2, 5, 2097192, 2, 5, 2097193, 2, 5, 2097194, 2, 5, 2097195, 2, 5, 2097196, 2, 5, 2097197, 2, 5, 262164, 2, 5, 262165, 2, 5, 327705, 2, 5, 458783, 2, 5, 524321, 2, 5, 524322, 2, 5, 524323, 2, 5, 524324, 2, 5, 589861, 2, 5, 655400, 2, 5, 720940, 2, 5, 720941, 2, 5, 196654, 65538, 0, 196653, 131074, 1, 196652, 131074, 1, 196651, 131074, 1, 196650, 131074, 1, 196649, 131074, 1, 196648, 131074, 1, 196647, 131074, 1, 196646, 131074, 1, 196645, 131074, 1, 196644, 131074, 1, 196643, 131074, 1, 196642, 131074, 1, 196641, 262146, 0, 196640, 196610, 0, 196639, 131074, 1, 196638, 131074, 1, 196637, 131074, 1, 196636, 131074, 1, 196635, 131074, 1, 196634, 131074, 1, 196633, 131074, 1, 196632, 131074, 1, 196631, 131074, 1, 196630, 131074, 1, 196629, 131074, 1, 196628, 131074, 1, 458785, 393218, 1, 393249, 2, 3, 327712, 131074, 3, 262176, 131074, 3, 327713, 2, 3, 262177, 2, 3, 458784, 327682, 1, 393248, 131074, 3, 458776, 393218, 1, 393240, 2, 3, 327704, 393218, 0, 458775, 65538, 2, 393239, 393218, 3, 327703, 65538, 4, 458774, 65538, 2, 393238, 393218, 3, 327702, 65538, 4, 458773, 327682, 1, 393237, 131074, 3, 327701, 327682, 0, 458782, 393218, 1, 393246, 2, 3, 327710, 393218, 0, 458781, 65538, 2, 393245, 393218, 3, 327709, 65538, 4, 458780, 65538, 2, 393244, 393218, 3, 327708, 65538, 4, 458779, 65538, 2, 393243, 393218, 3, 327707, 65538, 4, 458778, 327682, 1, 393242, 131074, 3, 327706, 327682, 0, 458791, 393218, 1, 393255, 2, 3, 327719, 393218, 0, 458790, 65538, 2, 393254, 393218, 3, 327718, 65538, 4, 458789, 65538, 2, 393253, 393218, 3, 327717, 65538, 4, 458788, 65538, 2, 393252, 393218, 3, 327716, 65538, 4, 458787, 327682, 1, 393251, 131074, 3, 327715, 327682, 0, 458796, 393218, 1, 393260, 2, 3, 327724, 393218, 0, 458795, 65538, 2, 393259, 393218, 3, 327723, 65538, 4, 458794, 65538, 2, 393258, 393218, 3, 327722, 65538, 4, 458793, 327682, 1, 393257, 131074, 3, 327721, 327682, 0, 262190, 131074, 0, 327726, 131074, 0, 393262, 131074, 0, 458798, 131074, 0, 524334, 131074, 0, 589870, 131074, 0, 655406, 131074, 0, 720942, 131074, 0, 786478, 65538, 1, 786477, 131074, 1, 786476, 131074, 1, 786475, 131074, 1, 786474, 131074, 1, 786473, 2, 0, 1048617, 2, 1, 983081, 131074, 0, 917545, 131074, 0, 852009, 131074, 0, 1048623, 458754, 2, 1048622, 131074, 1, 1048621, 131074, 1, 1048620, 131074, 1, 1048619, 131074, 1, 1048618, 131074, 1, 1179689, 2, 0, 1179690, 131074, 1, 1179691, 131074, 1, 1179692, 131074, 1, 1179693, 131074, 1, 1179694, 458754, 2, 1441833, 2, 1, 1376297, 131074, 0, 1310761, 131074, 0, 1245225, 131074, 0, 1441838, 65538, 0, 1441837, 131074, 1, 1441836, 131074, 1, 1441835, 131074, 1, 1441834, 131074, 1, 1048600, 65538, 1, 1048599, 131074, 1, 1048598, 131074, 1, 1048597, 131074, 1, 1048596, 131074, 1, 1048595, 458754, 3, 786456, 65538, 0, 851992, 131074, 0, 917528, 131074, 0, 983064, 131074, 0, 786451, 2, 1, 786452, 131074, 1, 786453, 131074, 1, 786454, 131074, 1, 786455, 131074, 1, 196627, 2, 0, 262163, 131074, 0, 327699, 131074, 0, 393235, 131074, 0, 458771, 131074, 0, 524307, 131074, 0, 589843, 131074, 0, 655379, 131074, 0, 720915, 131074, 0, 1179672, 65538, 0, 1179671, 131074, 1, 1179670, 131074, 1, 1179669, 131074, 1, 1179668, 131074, 1, 1179667, 458754, 3, 1441816, 65538, 1, 1376280, 131074, 0, 1310744, 131074, 0, 1245208, 131074, 0, 1441811, 2, 0, 1441812, 131074, 1, 1441813, 131074, 1, 1441814, 131074, 1, 1441815, 131074, 1, 1769491, 196610, 2, 1703955, 131074, 0, 1638419, 131074, 0, 1572883, 131074, 0, 1507347, 131074, 0, 2162707, 2, 1, 2097171, 131074, 0, 2031635, 131074, 0, 1966099, 131074, 0, 1900563, 131074, 0, 1835027, 196610, 3, 2162734, 65538, 1, 2162733, 131074, 1, 2162732, 131074, 1, 2162731, 131074, 1, 2162730, 131074, 1, 2162729, 131074, 1, 2162728, 131074, 1, 2162727, 131074, 1, 2162726, 131074, 1, 2162725, 131074, 1, 2162724, 131074, 1, 2162723, 131074, 1, 2162722, 131074, 1, 2162721, 131074, 1, 2162720, 131074, 1, 2162719, 131074, 1, 2162718, 131074, 1, 2162717, 131074, 1, 2162716, 131074, 1, 2162715, 131074, 1, 2162714, 131074, 1, 2162713, 131074, 1, 2162712, 131074, 1, 2162711, 131074, 1, 2162710, 131074, 1, 2162709, 131074, 1, 2162708, 131074, 1, 1572910, 131074, 0, 1638446, 131074, 0, 1703982, 131074, 0, 1769518, 262146, 2, 1835054, 262146, 3, 1900590, 131074, 0, 1966126, 131074, 0, 2031662, 131074, 0, 2097198, 131074, 0, 1835053, 65538, 2, 1769517, 65538, 4, 1835052, 327682, 1, 1769516, 327682, 0, 1835029, 393218, 1, 1769493, 393218, 0, 1835028, 65538, 2, 1769492, 65538, 4, 1507374, 131074, 0, 655384, 393218, 1, 589848, 393218, 0, 655383, 65538, 2, 589847, 65538, 4, 655382, 65538, 2, 589846, 65538, 4, 655381, 327682, 1, 589845, 327682, 0, 655396, 393218, 1, 589860, 393218, 0, 655395, 65538, 2, 589859, 65538, 4, 655394, 65538, 2, 589858, 65538, 4, 655393, 2, 2, 589857, 65538, 4, 655392, 131074, 2, 589856, 65538, 4, 655391, 65538, 2, 589855, 65538, 4, 655390, 65538, 2, 589854, 65538, 4, 655389, 327682, 1, 589853, 327682, 0, 852001, 393218, 1, 786465, 2, 3, 720929, 2, 3, 852000, 327682, 1, 786464, 131074, 3, 720928, 131074, 3, 655404, 393218, 1, 589868, 393218, 0, 655403, 65538, 2, 589867, 65538, 4, 655402, 65538, 2, 589866, 65538, 4, 655401, 327682, 1, 589865, 327682, 0, 1048603, 393218, 1, 983067, 2, 3, 917531, 2, 3, 851995, 2, 2, 786459, 2, 4, 720923, 2, 3, 655387, 2, 3, 589851, 393218, 0, 1048602, 327682, 1, 983066, 131074, 3, 917530, 131074, 3, 851994, 131074, 3, 786458, 131074, 3, 720922, 131074, 3, 655386, 131074, 3, 589850, 327682, 0, 851997, 65538, 2, 786461, 65538, 4, 851996, 65538, 2, 786460, 65538, 4, 851998, 393218, 1, 786462, 393218, 0, 852007, 2, 3, 786471, 2, 3, 852006, 131074, 2, 786470, 131074, 4, 852005, 65538, 2, 786469, 65538, 4, 852004, 65538, 2, 786468, 65538, 4, 852003, 327682, 1, 786467, 327682, 0, 1048615, 393218, 1, 983079, 2, 3, 917543, 2, 3, 720935, 2, 3, 655399, 2, 3, 589863, 393218, 0, 1048614, 327682, 1, 983078, 131074, 3, 917542, 131074, 3, 720934, 131074, 3, 655398, 131074, 3, 589862, 327682, 0, 983076, 65538, 0, 983075, 131074, 1, 983074, 327682, 268435458, 983073, 393218, 2, 983072, 393218, 2, 983071, 327682, 2, 983070, 458754, 2, 983069, 2, 0, 1245220, 65538, 1, 1179684, 131074, 0, 1114148, 131074, 0, 1048612, 131074, 0, 1245213, 2, 1, 1245214, 131074, 1, 1245215, 131074, 1, 1245216, 131074, 1, 1245217, 131074, 1, 1245218, 131074, 1, 1245219, 131074, 1, 1048605, 131074, 0, 1114141, 131074, 0, 1179677, 131074, 0, 1441819, 393218, 1, 1376283, 2, 3, 1310747, 2, 3, 1245211, 2, 3, 1179675, 393218, 0, 1441818, 327682, 1, 1376282, 131074, 3, 1310746, 131074, 3, 1245210, 131074, 3, 1179674, 327682, 0, 1441831, 393218, 1, 1376295, 2, 3, 1310759, 2, 3, 1245223, 2, 3, 1179687, 393218, 0, 1441830, 327682, 1, 1376294, 131074, 3, 1310758, 131074, 3, 1245222, 131074, 3, 1179686, 327682, 0, 1441828, 393218, 1, 1376292, 393218, 0, 1441827, 65538, 2, 1376291, 65538, 4, 1441826, 65538, 2, 1376290, 65538, 4, 1441825, 2, 2, 1376289, 65538, 4, 1441824, 131074, 2, 1376288, 65538, 4, 1441823, 65538, 2, 1376287, 65538, 4, 1441822, 65538, 2, 1376286, 65538, 4, 1441821, 327682, 1, 1376285, 327682, 0, 1638433, 393218, 1, 1572897, 2, 3, 1507361, 2, 3, 1638432, 327682, 1, 1572896, 131074, 3, 1507360, 131074, 3, 1638430, 393218, 1, 1572894, 393218, 0, 1638429, 65538, 2, 1572893, 65538, 4, 1638428, 65538, 2, 1572892, 65538, 4, 1638427, 65538, 2, 1572891, 65538, 4, 1638426, 327682, 1, 1572890, 327682, 0, 1638424, 2, 3, 1572888, 393218, 0, 1638423, 131074, 2, 1572887, 65538, 4, 1638422, 65538, 2, 1572886, 65538, 4, 1638421, 327682, 1, 1572885, 327682, 0, 1835032, 393218, 1, 1769496, 2, 3, 1703960, 2, 3, 1835031, 327682, 1, 1769495, 131074, 3, 1703959, 131074, 3, 1638439, 393218, 1, 1572903, 393218, 0, 1638438, 65538, 2, 1572902, 65538, 4, 1638437, 65538, 2, 1572901, 65538, 4, 1638436, 65538, 2, 1572900, 65538, 4, 1638435, 327682, 1, 1572899, 327682, 0, 1638444, 393218, 1, 1572908, 393218, 0, 1638443, 65538, 2, 1572907, 65538, 4, 1638442, 2, 2, 1572906, 65538, 4, 1638441, 131074, 3, 1572905, 327682, 0, 1835050, 393218, 1, 1769514, 2, 3, 1703978, 2, 3, 1835049, 327682, 1, 1769513, 131074, 3, 1703977, 131074, 3, 2031646, 393218, 1, 1966110, 393218, 0, 2031645, 65538, 2, 1966109, 65538, 4, 2031644, 65538, 2, 1966108, 65538, 4, 2031643, 65538, 2, 1966107, 2, 4, 2031642, 65538, 2, 1966106, 131074, 4, 2031641, 65538, 2, 1966105, 65538, 4, 2031640, 65538, 2, 1966104, 65538, 4, 2031639, 65538, 2, 1966103, 65538, 4, 2031638, 65538, 2, 1966102, 65538, 4, 2031637, 327682, 1, 1966101, 327682, 0, 1900571, 2, 3, 1835035, 2, 3, 1769499, 393218, 0, 1900570, 131074, 3, 1835034, 131074, 3, 1769498, 327682, 0, 1835044, 393218, 1, 1769508, 393218, 0, 1835043, 65538, 2, 1769507, 65538, 4, 1835042, 65538, 2, 1769506, 65538, 4, 1835041, 2, 2, 1769505, 65538, 4, 1835040, 131074, 2, 1769504, 65538, 4, 1835039, 65538, 2, 1769503, 65538, 4, 1835038, 65538, 2, 1769502, 65538, 4, 1835037, 327682, 1, 1769501, 327682, 0, 2031649, 393218, 1, 1966113, 2, 3, 1900577, 2, 3, 2031648, 327682, 1, 1966112, 131074, 3, 1900576, 131074, 3, 2031660, 393218, 1, 1966124, 393218, 0, 2031659, 65538, 2, 1966123, 65538, 4, 2031658, 65538, 2, 1966122, 65538, 4, 2031657, 65538, 2, 1966121, 65538, 4, 2031656, 65538, 2, 1966120, 65538, 4, 2031655, 65538, 2, 1966119, 2, 4, 2031654, 65538, 2, 1966118, 131074, 4, 2031653, 65538, 2, 1966117, 65538, 4, 2031652, 65538, 2, 1966116, 65538, 4, 2031651, 327682, 1, 1966115, 327682, 0, 1900583, 2, 3, 1835047, 2, 3, 1769511, 393218, 0, 1900582, 131074, 3, 1835046, 131074, 3, 1769510, 327682, 0)

[node name="Exit-L" type="Area2D" parent="Arena"]
position = Vector2(148, 140)
collision_layer = 0
collision_mask = 3

[node name="ColorRect" type="ColorRect" parent="Arena/Exit-L"]
offset_left = -28.0
offset_top = -12.0
offset_right = 4.0
offset_bottom = 12.0
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Exit-L"]
position = Vector2(-16, 0)
shape = SubResource("1")

[node name="Exit-R" type="Area2D" parent="Arena"]
position = Vector2(380, 140)
collision_layer = 0
collision_mask = 3

[node name="ColorRect" type="ColorRect" parent="Arena/Exit-R"]
offset_left = -4.0
offset_top = -12.0
offset_right = 28.0
offset_bottom = 12.0
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Exit-R"]
position = Vector2(16, 0)
shape = SubResource("1")

[node name="Ai_Timer" type="Timer" parent="."]
wait_time = 0.125
autostart = true

[node name="Scatter_Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="Sounds" type="Node2D" parent="."]

[node name="Dot_1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("13")
pitch_scale = 1.38

[node name="Dot_2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6")
pitch_scale = 1.38

[node name="Intro" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("14_uygvc")
autoplay = true

[node name="Ghost_Woo" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("15")
pitch_scale = 2.0

[node name="Ghost_wahwah" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("16")
pitch_scale = 0.69

[node name="Ghost_ewweww" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("17")
pitch_scale = 1.2

[node name="Bwahhh" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("18")
pitch_scale = 1.75

[connection signal="pellet_eaten" from="Pellets" to="." method="_on_Pellet_eaten"]
[connection signal="power_pellet_eaten" from="Pellets" to="." method="_on_Power_Pellet_eaten"]
[connection signal="player_reset" from="Pac-Man" to="." method="_on_PacMan_player_reset"]
[connection signal="body_entered" from="Arena/Exit-L" to="." method="_on_ExitL_body_entered"]
[connection signal="body_entered" from="Arena/Exit-R" to="." method="_on_ExitR_body_entered"]
[connection signal="timeout" from="Ai_Timer" to="." method="_on_Ai_Timer_timeout"]
[connection signal="timeout" from="Scatter_Timer" to="." method="_on_Scatter_Timer_timeout"]
[connection signal="finished" from="Sounds/Intro" to="." method="_on_Intro_finished"]
